--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -21,6 +21,10 @@ jobs:
       - uses: actions/checkout@v1
       - run: sudo apt-get update || true;
              sudo apt-get install ${{ matrix.compilers }} lp-solve;
+             for dir in $(ls -d *); do
+                   cd /examples/"$dir";
+                   cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
+                   cd ..
              rm -rf build;
              mkdir build;
              cd build;
