--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -18,11 +18,11 @@ jobs:
             compilers: [g++-5, g++-6, g++-7, g++-8, g++-9, g++-10]
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2.3.4
       - run: sudo apt-get update || true;
              sudo apt-get install ${{ matrix.compilers }} lp-solve;
              for dir in $(ls examples); do
-                   cd $(pwd)/examples/"$dir";
+                   cd ${GITHUB_WORKSPACE}/examples/"$dir";
                    cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
                    cd ../..
              done
