--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -25,7 +25,7 @@ jobs:
                    cd ${GITHUB_WORKSPACE}/examples/"$dir";
                    cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
                    cd ../..;
-             done
+             done;
              rm -rf build;
              mkdir build;
              cd build;
