--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - run: sudo apt-get update || true;
              sudo apt-get install ${{ matrix.compilers }} lp-solve;
+             sudo apt-get install libboost-all-dev;
+             sudo apt-get install python3;
              for dir in $(ls examples); do
                    cd ${GITHUB_WORKSPACE}/examples/"$dir";
                    cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
