install boost dependencies and numpy

--- a/examples/EnvelopeProblemSOS/CMakeLists.txt
+++ b/examples/EnvelopeProblemSOS/CMakeLists.txt
@@ -51,7 +51,7 @@ endif ()
 if (USE_OpenMP)
     find_package(OpenMP REQUIRED)
 endif (USE_OpenMP)
-
+find_package(Python3 REQUIRED)
 find_package(Python3 COMPONENTS Development NumPy)
 add_executable(EnvelopeProblem ${TARGETS})
 
