--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -16,7 +16,7 @@ jobs:
           fail-fast: false
           matrix:
             # compilers: [g++-5, g++-6, g++-7, g++-8, g++-9, g++-10]
-            compilers: [g++-9]
+            compilers: [g++-8, g++-9]
     runs-on: ubuntu-18.04
     steps:
       - name: Setup tmate session
@@ -29,7 +29,7 @@ jobs:
              sudo apt-get install python-numpy;
              for dir in $(ls examples); do
                    cd ${GITHUB_WORKSPACE}/examples/"$dir";
-                  #  cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
+                   #  cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
                    cd ../..;
              done;
              rm -rf build;
