--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -15,8 +15,7 @@ jobs:
     strategy:
           fail-fast: false
           matrix:
-            # compilers: [g++-5, g++-6, g++-7, g++-8, g++-9, g++-10]
-            compilers:  g++-9]
+            compilers: [g++-9]
     runs-on: ubuntu-18.04
     steps:
       - name: Setup tmate session
