--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -15,12 +15,12 @@ jobs:
     strategy:
           fail-fast: false
           matrix:
-            compilers: [g++-9]
+            compilers: [g++-5, g++-6, g++-7, g++-8, g++-9, g++-10]
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2.3.4
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
+      - uses: actions/checkout@v2.3.4
       - run: sudo apt-get update || true;
              sudo apt-get install ${{ matrix.compilers }} lp-solve;
              sudo apt-get install cmake libblkid-dev e2fslibs-dev libboost-all-dev libaudit-dev;
@@ -28,7 +28,7 @@ jobs:
              sudo apt-get install python-numpy;
              for dir in $(ls examples); do
                    cd ${GITHUB_WORKSPACE}/examples/"$dir";
-                   #  cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
+                  #  cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
                    cd ../..;
              done;
              rm -rf build;
@@ -36,4 +36,4 @@ jobs:
              cd build;
              cmake -D CMAKE_CXX_COMPILER=${{ matrix.compilers }} -D DISABLE_NLP_ORACLES=ON -D USE_MKL=OFF ../test;
              make;
-             ctest --verbose;      
+             ctest --verbose;
