--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -18,8 +18,6 @@ jobs:
             compilers: [g++-5, g++-6, g++-7, g++-8, g++-9, g++-10]
     runs-on: ubuntu-18.04
     steps:
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
       - uses: actions/checkout@v2.3.4
       - run: sudo apt-get update || true;
              sudo apt-get install ${{ matrix.compilers }} lp-solve;
@@ -28,7 +26,7 @@ jobs:
              sudo apt-get install python-numpy;
              for dir in $(ls examples); do
                    cd ${GITHUB_WORKSPACE}/examples/"$dir";
-                  #  cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
+                   cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
                    cd ../..;
              done;
              rm -rf build;
