--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -19,6 +19,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2.3.4
+      - uses: "actions/setup-python@v2"
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
       - run: sudo apt-get update || true;
