--- a/.github/workflows/cmake-gcc.yml
+++ b/.github/workflows/cmake-gcc.yml
@@ -29,7 +29,9 @@ jobs:
              pip install numpy;
              for dir in $(ls examples); do
                    cd ${GITHUB_WORKSPACE}/examples/"$dir";
-                   cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
+                   if [ "$dir" != "optimization_spectrahedra" ]; then
+                         cmake . -DLP_SOLVE=/usr/lib/lpsolve/liblpsolve55.so;
+                   fi
                    cd ../..;
              done;
              rm -rf build;
